<resources>
    <string name="app_name">Money Setter</string>

    <!--Strings related to home-->
    <string name="month">Month</string>
    <string name="year">year</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="target">Target</string>
    <string name="date">Date</string>
    <string name="col_date">Date</string>
    <string name="category">Category</string>
    <string name="col_category">Category</string>
    <string name="col_ammount">Ammount</string>
    <string name="col_description">Description</string>
    <string name="btn_add_add">Add</string>

    <!-- Strings related to signup -->
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_to_login">Already has an account</string>

    <!--Strings related to login-->
    <string name="_username">username</string>
    <string name="_password">password</string>
    <string name="prompt_to_signup">Create an account</string>


    <string name="action_sign_up">Signup</string>
    <string name="action_signin">Signin</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
</resources>
