<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.karim.moneysetter.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        ></LinearLayout>
    <TextView
        android:id="@+id/add_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="50dp"
        android:layout_marginStart="-350dp"
        />

    <TextView
        android:id="@+id/add_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/month"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/add_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="-110dp"
        android:text="@string/income"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/add_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="5dp"
        android:text="@string/expense"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/add_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="5dp"
        android:text="@string/target"
        android:textColor="@android:color/black"
        android:textSize="20dp" />
</android.support.v7.widget.LinearLayoutCompat>
